# miqi-skillshub

./: .gitignore  README.md
backend/: .air.toml  go.mod  go.sum
backend/cmd/server/: main.go
backend/config/: config.yaml
backend/internal/config/: config.go
backend/internal/database/: database.go
backend/internal/handler/: admin.go  artifact.go  auth.go  helpers.go  namespace.go  oauth_login.go  profile.go  review.go  runtime.go  scan.go  search.go  skill.go  team.go  version.go
backend/internal/middleware/: auth.go  base.go
backend/internal/model/: audit_log.go  install.go  llm_config.go  namespace.go  review.go  runtime_event.go  scan_report.go  skill.go  team.go  team_member.go  user.go  version.go
backend/internal/repository/: audit_repo.go  namespace_repo.go  review_repo.go  scan_report_repo.go  skill_repo.go  team_repo.go  version_repo.go
backend/internal/router/: router.go
backend/internal/service/: admin_service.go  artifact_service.go  auth_service.go  namespace_service.go  profile_service.go  review_service.go  (+4 more)
cli/: go.mod
deploy/docker/: Dockerfile.backend  Dockerfile.worker  docker-compose.yml
docs/api/: openapi.yaml
docs/en/: api-reference.md  architecture.md  cli.md  contributing.md  deployment.md  user-guide.md
docs/zh/: api-reference.md  architecture.md  cli.md  contributing.md  deployment.md  user-guide.md
workers/: celery_app.py  pyproject.toml
workers/llm_judge/: __init__.py  judge.py
workers/sandbox/: runner.py
workers/scanners/: __init__.py  manifest_validator.py  secret_scanner.py  static_scanner.py
(+41 files in other folders)
